--- a/html/home.html
+++ b/html/home.html
@@ -166,6 +166,35 @@
           <div id="recommendations" class="mt-6 grid grid-cols-2 dark:text-white gap-y-10 gap-x-6 md:grid-cols-3 lg:grid-cols-5 xl:gap-x-8"></div>
         </div>
 
+        <br>
+        <br>
+        <div id="recommendationDiv">
+          <h2 class="text-2xl font-extrabold tracking-tight text-gray-900 dark:text-white">Top Creators</h2>
+      
+          <div id="" class="mt-6 grid grid-cols-2 dark:text-white gap-y-10 gap-x-6 md:grid-cols-3 lg:grid-cols-5 xl:gap-x-8">
+            <div class="group relative dark:text-white">
+              <div class="object-cover aspect-square rounded-full bg-gray-200 aspect-w-1 aspect-h-1 overflow-hidden group-hover:opacity-75">
+                  <img class="aspect-square object-cover h-full" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimg00.deviantart.net%2F1614%2Fi%2F2011%2F273%2F8%2F5%2Felectric_dragon_by_insanable-d4bczwp.jpg&f=1&nofb=1" class=" object-center object-cover">
+              </div>
+              <div class="mt-4 flex justify-between">
+                  <div>
+                      <h3 class="text-sm">
+                      <a href="/series/${id}" class="text-gray-700 font-bold dark:text-gray-100">
+                          <span aria-hidden="true" class="absolute inset-0"></span>
+                          electricdragon
+                      </a>
+                      <br>
+                      <a href="/user/${id}">
+                      <span aria-hidden="true" class="text-xs absolute inset-0 text-gray-300"></span>
+                      <p class="text-xs text-gray-500 dark:text-gray-500">Artist</p>
+                      </a>
+                      </h3>
+                  </div>
+              </div>
+         </div>          
+        </div>
+        </div>
+
       </div>
 
       <script defer src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
