--- a/html/advertisement.html
+++ b/html/advertisement.html
@@ -684,6 +684,102 @@
 
 					</div>
 					<div x-show.transition.in="step === 3">
+                        <div class="p-4 bg-gray-100 rounded-full">
+                            <h1 class="ml-2 font-bold uppercase">Order Details</h1>
+                          </div>
+                        <table class="w-full text-sm lg:text-base" cellspacing="0">
+                            <thead>
+                              <tr class="h-12 uppercase">
+                                <th class="hidden md:table-cell"></th>
+                                <th class="text-left">Product</th>
+                                <th class="hidden text-right md:table-cell">Duration</th>
+                                <th class="text-right">Total price</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr>
+                                <td class="hidden pb-4 md:table-cell">
+                                  <a href="#">
+                                    <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fpm1.narvii.com%2F7225%2F1c70ea7a886c1362a02c3637b760310370e3c6c9r1-1080-1152v2_uhq.jpg&f=1&nofb=1" class="w-20 rounded" alt="Thumbnail">
+                                  </a>
+                                </td>
+                                <td>
+                                  <a href="#">
+                                    <p class="mb-2 md:ml-4">Henyai</p>
+                                  </a>
+                                </td>
+                                <td class="hidden text-right md:table-cell">
+                                  <span class="text-sm lg:text-base font-medium">
+                                    <span class="font-bold ">6:00</span> to <span class="font-bold ">16:00</span>                                  </span>
+                                </td>
+                                <td class="text-right">
+                                  <span class="text-sm lg:text-base font-medium">
+                                    Rs.69
+                                  </span>
+                                </td>
+                              </tr> 
+
+                            </tbody>
+                          </table>
+                        <div class="lg:px-2">
+
+                            <div class="p-4">
+                              <!-- <p class="mb-6 italic">Your ad will run from <span class="font-bold ">6:00</span> to <span class="font-bold ">16:00</span>.</p> -->
+                                <!-- <div class="flex justify-between border-b">
+                                  <div class="lg:px-4 lg:py-2 m-2 text-lg lg:text-xl font-bold text-center text-gray-800">
+                                    Subtotal
+                                  </div>
+                                  <div class="lg:px-4 lg:py-2 m-2 lg:text-lg font-bold text-center text-gray-900">
+                                    148,827.53€
+                                  </div>
+                                </div>
+                                  <div class="flex justify-between pt-4 border-b">
+                                    <div class="flex lg:px-4 lg:py-2 m-2 text-lg lg:text-xl font-bold text-gray-800">
+                                      <form action="" method="POST">
+                                        <button type="submit" class="mr-2 mt-1 lg:mt-2">
+                                          <svg aria-hidden="true" data-prefix="far" data-icon="trash-alt" class="w-4 text-red-600 hover:text-red-800" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M268 416h24a12 12 0 0012-12V188a12 12 0 00-12-12h-24a12 12 0 00-12 12v216a12 12 0 0012 12zM432 80h-82.41l-34-56.7A48 48 0 00274.41 0H173.59a48 48 0 00-41.16 23.3L98.41 80H16A16 16 0 000 96v16a16 16 0 0016 16h16v336a48 48 0 0048 48h288a48 48 0 0048-48V128h16a16 16 0 0016-16V96a16 16 0 00-16-16zM171.84 50.91A6 6 0 01177 48h94a6 6 0 015.15 2.91L293.61 80H154.39zM368 464H80V128h288zm-212-48h24a12 12 0 0012-12V188a12 12 0 00-12-12h-24a12 12 0 00-12 12v216a12 12 0 0012 12z"/></svg>
+                                        </button>
+                                      </form>
+                                      Coupon "90off"
+                                    </div>
+                                    <div class="lg:px-4 lg:py-2 m-2 lg:text-lg font-bold text-center text-green-700">
+                                      -133,944.77€
+                                    </div>
+                                  </div>
+                                  <div class="flex justify-between pt-4 border-b">
+                                    <div class="lg:px-4 lg:py-2 m-2 text-lg lg:text-xl font-bold text-center text-gray-800">
+                                      New Subtotal
+                                    </div>
+                                    <div class="lg:px-4 lg:py-2 m-2 lg:text-lg font-bold text-center text-gray-900">
+                                      14,882.75€
+                                    </div>
+                                  </div>
+                                  <div class="flex justify-between pt-4 border-b">
+                                    <div class="lg:px-4 lg:py-2 m-2 text-lg lg:text-xl font-bold text-center text-gray-800">
+                                      Tax
+                                    </div>
+                                    <div class="lg:px-4 lg:py-2 m-2 lg:text-lg font-bold text-center text-gray-900">
+                                      2,976.55€
+                                    </div>
+                                  </div> -->
+                                  <div class="flex justify-between pt-4 border-b">
+                                    <div class="lg:px-4 lg:py-2 m-2 text-lg lg:text-xl font-bold text-center text-gray-800">
+                                      Total
+                                    </div>
+                                    <div class="lg:px-4 lg:py-2 m-2 lg:text-lg font-bold text-center text-gray-900">
+                                      Rs. 69
+                                    </div>
+                                  </div>
+                                <a href="#">
+                                  <button class="flex justify-center w-full px-10 py-3 mt-6 font-medium text-white uppercase bg-gray-800 rounded-full shadow item-center hover:bg-gray-700 focus:shadow-outline focus:outline-none">
+                                    <svg aria-hidden="true" data-prefix="far" data-icon="credit-card" class="w-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M527.9 32H48.1C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48.1 48h479.8c26.6 0 48.1-21.5 48.1-48V80c0-26.5-21.5-48-48.1-48zM54.1 80h467.8c3.3 0 6 2.7 6 6v42H48.1V86c0-3.3 2.7-6 6-6zm467.8 352H54.1c-3.3 0-6-2.7-6-6V256h479.8v170c0 3.3-2.7 6-6 6zM192 332v40c0 6.6-5.4 12-12 12h-72c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h72c6.6 0 12 5.4 12 12zm192 0v40c0 6.6-5.4 12-12 12H236c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h136c6.6 0 12 5.4 12 12z"/></svg>
+                                    <span class="ml-2 mt-5px">Generate Payment Portal</span>
+                                  </button>
+                                  <p class="mt-2 text-sm text-gray-500 mb-5 ml-2">This will redirect you to the payment portal.</p>
+
+                                </a>
+                            </div>
+                          </div>
 
 
 					</div>
