refined the css

--- a/html/advertisement.html
+++ b/html/advertisement.html
@@ -692,7 +692,7 @@
                               <tr class="h-12 uppercase dark:text-white">
                                 <th class="hidden md:table-cell"></th>
                                 <th class="text-left">Product</th>
-                                <th class="hidden text-right md:table-cell">Duration</th>
+                                <th class="hidden text-center md:table-cell">Duration</th>
                                 <th class="text-right">Total price</th>
                               </tr>
                             </thead>
@@ -700,7 +700,7 @@
                               <tr>
                                 <td class="hidden pb-4 md:table-cell">
                                   <a id="pfpAnchor">
-                                    <img id="seriesCover" src="" class="w-20 rounded" alt="Series Cover">
+                                    <img id="seriesCover" src="" class="w-20 rounded aspect-square" alt="Series Cover">
                                   </a>
                                 </td>
                                 <td>
@@ -708,7 +708,7 @@
                                     <p id="seriesTitle" class="mb-2 md:ml-4 dark:text-white"></p>
                                   </a>
                                 </td>
-                                <td class="hidden text-right md:table-cell">
+                                <td class="hidden text-center md:table-cell">
                                   <span class="text-sm lg:text-base font-medium dark:text-white">
                                     <span id="startDate" class="font-bold dark:text-white"></span> to <span id="endDate" class="font-bold dark:text-white"></span>                                  
                                   </span>
@@ -762,14 +762,12 @@
                                       2,976.55€
                                     </div>
                                   </div> -->
-                                  <!-- <div class="flex justify-between pt-4 border-b">
+                                  <div class="flex justify-between pt-4 border-b">
                                     <div class="lg:px-4 lg:py-2 m-2 text-lg lg:text-xl font-bold text-center text-gray-800">
-                                      Total
                                     </div>
                                     <div class="lg:px-4 lg:py-2 m-2 lg:text-lg font-bold text-center text-gray-900">
-                                      Rs. 69
                                     </div>
-                                  </div> -->
+                                  </div>
                                 <a href="#">
                                   <button id="btnGenerateLink" onclick="generateLink(event)" class="flex justify-center w-full px-10 py-3 mt-6 font-medium text-white uppercase bg-gray-800 rounded-full shadow item-center hover:bg-gray-700 focus:shadow-outline focus:outline-none">
                                     <svg aria-hidden="true" data-prefix="far" data-icon="credit-card" class="w-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M527.9 32H48.1C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48.1 48h479.8c26.6 0 48.1-21.5 48.1-48V80c0-26.5-21.5-48-48.1-48zM54.1 80h467.8c3.3 0 6 2.7 6 6v42H48.1V86c0-3.3 2.7-6 6-6zm467.8 352H54.1c-3.3 0-6-2.7-6-6V256h479.8v170c0 3.3-2.7 6-6 6zM192 332v40c0 6.6-5.4 12-12 12h-72c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h72c6.6 0 12 5.4 12 12zm192 0v40c0 6.6-5.4 12-12 12H236c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h136c6.6 0 12 5.4 12 12z"/></svg>
