shows top creators

--- a/html/home.html
+++ b/html/home.html
@@ -168,11 +168,11 @@
 
         <br>
         <br>
-        <div id="recommendationDiv">
+        <div>
           <h2 class="text-2xl font-extrabold tracking-tight text-gray-900 dark:text-white">Top Creators</h2>
       
-          <div id="" class="mt-6 grid grid-cols-2 dark:text-white gap-y-10 gap-x-6 md:grid-cols-3 lg:grid-cols-5 xl:gap-x-8">
-            <div class="group relative dark:text-white">
+          <div id="popularCreatorsDiv" class="mt-6 grid grid-cols-2 dark:text-white gap-y-10 gap-x-6 md:grid-cols-3 lg:grid-cols-5 xl:gap-x-8">
+            <!-- <div class="group relative dark:text-white">
               <div class="object-cover aspect-square rounded-full bg-gray-200 aspect-w-1 aspect-h-1 overflow-hidden group-hover:opacity-75">
                   <img class="aspect-square object-cover h-full" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimg00.deviantart.net%2F1614%2Fi%2F2011%2F273%2F8%2F5%2Felectric_dragon_by_insanable-d4bczwp.jpg&f=1&nofb=1" class=" object-center object-cover">
               </div>
@@ -184,14 +184,12 @@
                           electricdragon
                       </a>
                       <br>
-                      <a href="/user/${id}">
                       <span aria-hidden="true" class="text-xs absolute inset-0 text-gray-300"></span>
                       <p class="text-xs text-gray-500 dark:text-gray-500">Artist</p>
-                      </a>
                       </h3>
                   </div>
               </div>
-         </div>          
+         </div>           -->
         </div>
         </div>
 
