--- a/html/library.html
+++ b/html/library.html
@@ -132,11 +132,11 @@
     })
   })</script>
 </nav>
-<header class="flex dark:bg-background mt-2 border-t-0 border-x-0 dark:border-none w-screen items-center text-center justify-center gap-7 border h-16 z-40">
+<!-- <header class="flex dark:bg-background mt-2 border-t-0 border-x-0 dark:border-none w-screen items-center text-center justify-center gap-7 border h-16 z-40">
   <p class="rounded-md px-3 font-bold  bg-black dark:bg-white text-white uppercase hover:underline cursor-pointer dark:text-black">ALL</p>
   <p class="text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">Web Novels</p>
   <p class="text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">Web Novels</p>
-</header>
+</header> -->
     <div class="bg-white w-screen ">
         <div class="max-w-2xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
           <h2 class="text-2xl font-extrabold tracking-tight text-gray-900">Series you follow</h2>
