--- a/html/search.html
+++ b/html/search.html
@@ -127,7 +127,7 @@
                     Search...
                 </div>
             </div>
-            <nav :class="isOpen ? '' : 'hidden'" class="sm:flex sm:justify-center sm:items-center mt-4">
+            <!-- <nav :class="isOpen ? '' : 'hidden'" class="sm:flex sm:justify-center sm:items-center mt-4">
                 <div class="flex flex-col sm:flex-row">
                     <a class="mt-3 text-gray-600 dark:text-gray-100 hover:underline sm:mx-3 sm:mt-0" href="#">Horror</a>
                     <a class="mt-3 text-gray-600 dark:text-gray-100 hover:underline sm:mx-3 sm:mt-0" href="#">Comedy</a>
@@ -135,7 +135,7 @@
                     <a class="mt-3 text-gray-600 dark:text-gray-100 hover:underline sm:mx-3 sm:mt-0" href="#">uwu</a>
                     <a class="mt-3 text-gray-600 dark:text-gray-100 hover:underline sm:mx-3 sm:mt-0" href="#">hentai</a>
                 </div>
-            </nav>
+            </nav> -->
             <div class="relative mt-6 max-w-lg mx-auto">
             <span class="absolute inset-y-0 left-0 pl-3 flex items-center">
                 <svg class="h-5 w-5 text-gray-500" viewBox="0 0 24 24" fill="none">
