--- a/html/search.html
+++ b/html/search.html
@@ -177,7 +177,7 @@
     <main class="my-8">
         <div class="container mx-auto px-6">
             <div id="searchResults" class="grid gap-2 grid-flow-row grid-cols-2">
-                <!-- <div class="max-w-2xl bg-white border-2 border-gray-300 p-5 rounded-md tracking-wide shadow-lg">
+                <div class="max-w-2xl bg-white border-2 border-gray-300 p-5 rounded-md tracking-wide shadow-lg">
                     <div id="header" class="grid grid-flow-col"> 
                         <div class="object-cover aspect-square bg-gray-200 aspect-w-1 aspect-h-1 rounded-md overflow-hidden group-hover:opacity-75">
                             <img class="aspect-square object-cover" src="https://cover.nep.li/cover/Kanojo-Okarishimasu.jpg" class=" object-center object-cover">
@@ -224,11 +224,10 @@
                          </div>
                        </div>
                     </div>
-                 </div> -->
+                 </div>
 
             </div>
-
-            <main class="my-8">
+            <main class="my-8 ">
                   <div class="container mx-auto px-6">
                       <div class="h-64 rounded-md overflow-hidden bg-cover bg-center" style="background-image: url('')">
                           <div class="bg-gray-900 bg-opacity-50 flex items-center h-full">
