--- a/html/account.html
+++ b/html/account.html
@@ -68,7 +68,7 @@
                       <span class="ml-4">Profile</span>
                   </a>
               </li>
-              <li class="relative px-6 py-3"> 
+              <li id="sideBarOnlyCreators" class="relative px-6 py-3"> 
                 <a class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200"
                   href="/dashboard/creator">
                   <svg class="w-5 h-5" aria-hidden="true" fill="none" stroke-linecap="round" stroke-linejoin="round"
@@ -79,7 +79,7 @@
                   <span class="ml-4">Only Creators</span>
                 </a>
               </li>
-              <li class="relative px-6 py-3">
+              <li id="sideBarAdvertisement" class="relative px-6 py-3">
                 <a class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200"
                   href="/ad">
                   <svg class="w-5 h-5" aria-hidden="true" fill="none" stroke-linecap="round" stroke-linejoin="round"
@@ -575,7 +575,7 @@
                                     <input onclick="toggleDark(event)" type="checkbox" name="toggleDarkMode" id="toggleDarkMode" class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"/>
                                     <label for="toggleDarkMode" class="toggle-label block overflow-hidden h-6 rounded-full bg-gray-300 cursor-pointer"></label>
                                 </div>
-                                <label for="toggle" class="text-md text-gray-700">Dark Mode</label>
+                                <label for="toggleDarkMode" class="text-md text-gray-700">Dark Mode</label>
                                 </div>                  
                               <div class="mt-8 md:flex items-center">
                                   <div class="flex flex-col">
