--- a/html/popular.html
+++ b/html/popular.html
@@ -144,7 +144,7 @@
                     <div class="grid grid-flow-row">
                         <div class="text-gray-400 text-sm mt-1"><a id="mostPopularGenre1"></a><span class="mx-1">,</span><a id="mostPopularGenre2"></a></div>
                         <a class="font-bold text-2xl mt-2 dark:text-white" id="mostPopularTitle"></a>
-                        <div class="font-bold text-gray-500 text-xl dark:text-white" id="mostPopularCreatorUsername">by Missing</div>
+                        <a class="font-bold text-gray-500 text-base dark:text-white" id="mostPopularCreatorUsername"></a>
                         <div class="text-gray-600 text-left mt-1" id="mostPopularSummary"></div>
 
                   </div>
