--- a/html/series.html
+++ b/html/series.html
@@ -453,7 +453,7 @@
                                 </div>
                             </a>
                   
-                      <div id="seriesHolder" class="grid grid-cols-2 mt-8 lg:grid-cols-4 gap-x-8 gap-y-8">
+                      <div id="seriesHolder" class="grid grid-cols-2 mt-8 lg:grid-cols-5 gap-x-8 gap-y-8 px-3">
                       </div>
                     </div>
 
