--- a/html/creator.html
+++ b/html/creator.html
@@ -210,7 +210,7 @@
                                         x-transition:leave="transition ease-in duration-200 transform"
                                         x-transition:leave-start="opacity-100 translate-y-0 sm:scale-100" 
                                         x-transition:leave-end="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
-                                        class="inline-block w-full max-w-xl p-8 my-20 overflow-hidden text-left transition-all transform bg-gray-100 rounded-lg shadow-xl 2xl:max-w-2xl"
+                                        class="inline-block w-full max-w-xl p-8 my-20 overflow-hidden text-left transition-all transform bg-gray-50 rounded-lg shadow-xl 2xl:max-w-2xl"
                                     >
                                         <div class="flex items-center justify-between space-x-4">
                                             <h1 class="text-xl font-medium text-gray-800 ">Request for Adaptation</h1>
@@ -288,7 +288,7 @@
                                          <form class="mt-5">
                                             <div>
                                                 <label for="user name" class="block text-sm text-gray-700 capitalize dark:text-gray-200">Short Message</label>
-                                                <input placeholder="Hey! I am example and would love you to..." type="text" class="block w-full px-3 py-2 mt-2 text-gray-600 placeholder-gray-400 bg-white border border-gray-200 rounded-md focus:border-indigo-400 focus:outline-none focus:ring focus:ring-indigo-300 focus:ring-opacity-40">
+                                                <input placeholder="Hey! I am example and would love you to..." type="text" class="block w-full px-3 py-2 mt-2 text-gray-600  bg-white border border-gray-200 rounded-md focus:border-indigo-400 focus:outline-none focus:ring focus:ring-indigo-300 focus:ring-opacity-40">
                                             </div>
                                             
                                             <div class="mt-4">
@@ -349,11 +349,9 @@
                           <span>Discord</span>
                         </a>
                         <a target="_blank" rel="noopener" id="youtube"
-                          class="bg-blue-500 px-2 text-sm py-1 font-semibold text-white inline-flex items-center space-x-2 rounded">
-                          <svg class="w-5 h-5 fill-current" role="img" xmlns="http://www.w3.org/2000/svg"
-                            viewBox="0 0 24 24">
-                            <path
-                              d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z" />
+                          class="bg-red-500 px-2 text-sm py-1 font-semibold text-white inline-flex items-center space-x-2 rounded">
+                          <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 fill-current " viewBox="0 0 16 16">
+                            <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z"/>
                           </svg>
                           <span>Youtube</span>
                         </a>
