popular page dark mode

--- a/html/creator.html
+++ b/html/creator.html
@@ -274,7 +274,7 @@
                                           </div>
                                          <form class="mt-5">
                                             <div>
-                                                <label for="user name" class="block text-sm text-gray-700 capitalize dark:text-gray-200">Short Message</label>
+                                                <label for="user name" class="block text-sm text-gray-700 capitalize ">Short Message</label>
                                                 <input placeholder="Hey! I am example and would love you to..." type="text" class="block w-full px-3 py-2 mt-2 text-gray-600  bg-white border border-gray-200 rounded-md focus:border-indigo-400 focus:outline-none focus:ring focus:ring-indigo-300 focus:ring-opacity-40">
                                             </div>
                                             
