search page dark mode

--- a/html/search.html
+++ b/html/search.html
@@ -142,7 +142,7 @@
 <!-- component -->
 <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 
-<div x-data="{ cartOpen: false , isOpen: false }" class="bg-white dark:bg-background mt-5">
+<div x-data="{ cartOpen: false , isOpen: false }" class="bg-white dark:bg-background mt-5 dark:mt-0">
     <header>
         <div class="container mx-auto px-6 py-3">
             <div class="flex items-center justify-between">
