--- a/html/creator.html
+++ b/html/creator.html
@@ -395,20 +395,17 @@
                   <div class="grid md:grid-cols-4 md:max-w-2xl  md:mb-5 md:grid-flow-col col-span-2">
                     <div class="relative mt-4 col-start-1 col-span-2 justify-center sm:grid-flow-row">
                       <div class="relative"><img class="h-72 object-cover aspect-square" id="mostPopularCover"
-                          src="https://zduoakccvlarenfacitl.supabase.co/storage/v1/object/public/users/c3112183-4f22-4e3d-9426-7f3baadc1765/profile/samples/6EF0BAEE-B9A0-4275-80D9-DEA3F146CC9C.JPG"
+                          src=""
                           alt="Most popular work"></div>
                       <p class="absolute top-0 left-0 text-5xl m-4 text-white bg-black rounded-md p-1 px-2 ">1</p>
-                      <div class="text-gray-400 text-sm "><a id="mostPopularGenre1">LMOA</a><span
-                          class="mx-1">,</span><a id="mostPopularGenre2">SUS</a></div>
+                      <div class="text-gray-400 text-sm "><a id="mostPopularGenre1"></a><span
+                          class="mx-1">,</span><a id="mostPopularGenre2"></a></div>
                     </div>
                     <div class="flex flex-col col-span-2  ">
-                      <a class="font-bold text-2xl mt-2 dark:text-white" id="mostPopularTitle">lol</a>
-                      <a class="font-bold text-gray-500 text-base dark:text-gray-300"
-                        id="mostPopularCreatorUsername">GG</a>
-                      <div class="text-gray-600 text-left mt-6" id="mostPopularSummary">Lorem ipsum dolor sit amet
-                        consectetur adipisicing elit. Id beatae error deserunt ea dolorum explicabo, officia dolor
-                        repellendus quidem nostrum illum laboriosam quas molestiae cupiditate magnam doloremque
-                        delectus vel accusamus.</div>
+                      <a class="font-bold text-2xl mt-2 dark:text-white" id="mostPopularTitle"></a>
+                      <!-- <a class="font-bold text-gray-500 text-base dark:text-gray-300"
+                        id="mostPopularCreatorUsername">GG</a> -->
+                      <div class="text-gray-600 text-left mt-6" id="mostPopularSummary"></div>
 
                     </div>
                   </div>
@@ -605,11 +602,11 @@
                                 <div class="flex -mx-2 mb-4">
                                   <template id="templateStep" x-for="i in 5">
                                     <div class="flex-1 px-2">
-                                      <button x-on:click="image = i"
+                                      <button x-text="i" x-on:click="image = i"
                                         :class="{ 'ring-2 ring-indigo-300 ring-inset': image === i }"
-                                        class="focus:outline-none w-full rounded-lg h-24 md:h-32 bg-gray-100 flex items-center justify-center">
-                                        <span x-text="i" class="text-2xl"></span>
-                                      </button>
+                                        class="focus:outline-none w-full rounded-lg h-24 md:h-32 bg-gray-100 flex items-center justify-center" src="" />
+                                        <span class="text-2xl"></span>
+                                    </button>
                                     </div>
                                   </template>
                                 </div>
